# SkillWatch

./: .gitignore  .handover.md  AUDIT-REPORT.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  SECURITY.md  index.html  skillwatch-overview.js
skillwatch/: __init__.py  cli.py  detector.py  differ.py  fetcher.py  formatter.py  parser.py  ssrf.py  store.py
tests/: conftest.py  test_cli.py  test_detector.py  test_differ.py  test_fetcher.py  test_formatter.py  test_parser.py  test_ssrf.py  test_store.py  test_threading.py
tests/fixtures/: sample_skill.md
